ThreeBoxes/Box/main/default/objects/BoxCounterApiService__c/BoxCounterApiService__c.object-meta.xml
<CustomObject>
    <label>BoxCounterApiService</label>
    <nameField>
        <label>BoxCounterApiService名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>