ThreeBoxes/Box/main/default/objects/BoxCounterApiService__c/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <label>EndPoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>