ThreeBoxes/Box/main/default/objects/BoxCounterApiService__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>128</length>
    <type>Text</type>
</CustomField>