ThreeBoxes/Box/main/default/objects/BoxCounterApiService__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>128</length>
    <type>Text</type>
</CustomField>