ThreeBoxes/Box/main/default/objects/BoxCounterApiService__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EndPoint__c</columns>
    <columns>Password__c</columns>
    <columns>Username__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>